--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   <!-- Custom styles for this template -->
   <link href="css/resume.css" rel="stylesheet">
+  <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
 
 </head>
 
@@ -81,11 +82,11 @@
         <h5>(Graphic Design)</h5>
         <h5 class="pb-4">All of these images in original resolution can be found <a href="https://drive.google.com/drive/folders/1dOsrfo5ygPEOZxh-i-attJyUltQHUgBF?usp=sharing">here</a></h5>
 
-        <div class="text-center align-items-center row d-flex justify-content-around">
-          <div class="col-sm-3">
+        <div class="owl-carousel owl-theme">
+          <div class="">
             <img src="img/ifchipotleservedchurros.png">
           </div>
-          <div class="col-sm-3">
+          <div class="">
             <img src="img/ifchipotleservedchurros2.png">
           </div>
         </div>
@@ -280,6 +281,7 @@
 
   <!-- Plugin JavaScript -->
   <script src="lib/easing/easing.min.js"></script>
+  <script src="lib/owlcarousel/owl.carousel.min.js"></script>
 
   <!-- Custom scripts for this template -->
   <script src="js/resume.js"></script>
