--- a/index.html
+++ b/index.html
@@ -15,11 +15,16 @@
 
   <!-- Custom fonts for this template -->
   <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Muli|Roboto|Montserrat:400,400i,800,800i" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   <!-- Custom styles for this template -->
   <link href="css/resume.css" rel="stylesheet">
-  <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+  <!--Owl Carousel-->
+  <link rel="stylesheet" href="lib/owlcarousel/assets/owl.carousel.min.css">
+  <link rel="stylesheet" href="lib/owlcarousel/assets/owl.theme.green.min.css">
+  <!--Slick Carousel-->
+  <link rel="stylesheet" type="text/css" href="lib/slick/slick.css"/>
+  <link rel="stylesheet" type="text/css" href="lib/slick/slick-theme.css"/>
 
 </head>
 
@@ -40,9 +45,6 @@
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#Photography">Photography</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#YouTube">YouTube</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#Writing">Writing</a>
@@ -71,6 +73,53 @@
           <li>Alternative Energy</li>
           <li>Initiatives that make the world a better place</li>
         </ul>
+        <br>
+        <div class="card text-center mb-3 shadow-lg" style="width: 50%; margin: auto;">
+          <h5>Eduation</h5>
+          <p>Rutgers Business School - New Brunswick</p>
+          <p>Honors Program Student</p>
+          <p>GPA: 3.56/4.0</p>
+        </div>
+        <div class="d-flex justify-content-around text-center">
+          <div class="col-sm-4 m-1">
+            <div class="card shadow-lg">
+              <h5>Computer Labs Consultant</h5>
+              <p>Rutgers Office of Information Technology</p>
+            </div>
+          </div>
+          <div class="col-sm-4 m-1">
+            <div class="card shadow-lg">
+              <h5>Marketing/Procurement Intern</h5>
+              <p>US Foods</p>
+            </div>
+          </div>
+          <div class="col-sm-4 m-1">
+            <div class="card shadow-lg">
+              <h5>Customer Service Cashier</h5>
+              <p>Inspiration Roll</p>
+            </div>
+          </div>
+        </div>
+        <div class="d-flex justify-content-around text-center">
+          <div class="col-sm-4 m-1">
+            <div class="card shadow-lg">
+              <h5>Dean's Office A/V Assistant</h5>
+              <p>Rutgers Business School</p>
+            </div>
+          </div>
+          <div class="col-sm-4 m-1">
+            <div class="card shadow-lg">
+              <h5>Intern</h5>
+              <p>Modern Wall Street</p>
+            </div>
+          </div>
+          <div class="col-sm-4 m-1">
+            <div class="card shadow-lg">
+              <h5>Intern</h5>
+              <p>Modern Wall Street</p>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
@@ -80,50 +129,45 @@
       <div class="w-100">
         <h2>Portfolio</h2>
         <h5>(Graphic Design)</h5>
-        <h5 class="pb-4">All of these images in original resolution can be found <a href="https://drive.google.com/drive/folders/1dOsrfo5ygPEOZxh-i-attJyUltQHUgBF?usp=sharing">here</a></h5>
+        <h5 class="pb-2">All of these images in original resolution can be found <a href="https://drive.google.com/drive/folders/1dOsrfo5ygPEOZxh-i-attJyUltQHUgBF?usp=sharing">here</a></h5>
 
-        <div class="owl-carousel owl-theme">
-          <div class="">
-            <img src="img/ifchipotleservedchurros.png">
-          </div>
-          <div class="">
-            <img src="img/ifchipotleservedchurros2.png">
-          </div>
+        <div class="hackru-carousel text-center" id="hackru-carousel">
+            <div class="item"><img src="img/hackru/hackru1.png"><p>"Lab"</p></div>
+            <div class="item"><img src="img/hackru/hackru2.png"><p>"Night Lights"</p></div>
+            <div class="item"><img src="img/hackru/hackru4.png"><p>"Space Window"</p></div>
+            <div class="item"><img src="img/hackru/hackru3.png"><p>"City Motherboard"</p></div>
+            <div class="item"><img src="img/hackru/hackru5.png"><p>"LCARS Data Feed"</p></div>
+            <div class="item"><img src="img/hackru/hackru6.png"><p>"Two Cities"</p></div>
+            <div class="item"><img src="img/hackru/hackru7.png"><p>"Warehouse Computer"</p></div>
+        </div>
+        <br>
+        <p class="text-center">These are section headers that I made that were inspired by the MTA's subway line numbers.</p>
+        <div class="d-flex flex-md-row justify-content-around align-items-center mb-3">
+          <div class="col-sm-4"><img src="img/subway/subway1.png"></div>
+          <div class="col-sm-4"><img src="img/subway/subway2.png"></div>
+          <div class="col-sm-4"><img src="img/subway/subway3.png"></div>
+        </div>
+        <p class="text-center m-4">Lastly, this was a header I made that was inspired by the yellow taxi cabs.</p>
+        <div class="d-flex m-3">
+          <div class="col-sm-6 offset-3"><img src="img/taxiheader.png"></div>
         </div>
 
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">December 2011 - March 2013</span>
-          </div>
+        <div class="text-center pt-4">
+          <p>Our fraternity was looking for a new design for our shirts.</p>
+          <p>I came up with a Jersey-proud design that was inspired by the <a href="https://upload.wikimedia.org/wikipedia/commons/b/b8/2014-12-20_15_44_54_Welcome_To_New_Jersey_sign_in_front_of_the_New_Jersey_Department_of_Transportation_Headquarters_in_Ewing%2C_New_Jersey.JPG">"Welcome to NJ Sign"</a></p>
+          <p>This is a design I made for the back of our Fall 2018 rush shirts.</p>
         </div>
+        <div class="d-flex flex-md-row justify-content-around align-items-center mb-3">
+            <div class="col-sm-4"><img src="img/frat/frat1.png" onclick="drive()"></div>
+            <div class="col-sm-4"><img src="img/frat/frat2.png" onclick="drive()"></div>
+            <div class="col-sm-4"><img src="img/frat/frat3.png" onclick="drive()"></div>
+          </div>
 
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">Junior Web Designer</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">July 2010 - December 2011</span>
-          </div>
+        <div class="shirt-carousel align-items-center text-center" id="shirt-carousel">
+            <div class="item"><img src="img/shirts/shirt1.png"><p></p></div>
+            <div class="item"><img src="img/shirts/shirt2.png"><p></p></div>
+            <div class="item"><img src="img/shirts/shirt3.png"><p></p></div>
         </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
-          <div class="resume-content">
-            <h3 class="mb-0">Web Design Intern</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">September 2008 - June 2010</span>
-          </div>
-        </div>
-
       </div>
 
     </section>
@@ -134,26 +178,30 @@
       <div class="w-100">
         <h2 class="mb-5">Music</h2>
 
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">University of Colorado Boulder</h3>
-            <div class="subheading mb-3">Bachelor of Science</div>
-            <div>Computer Science - Web Development Track</div>
-            <p>GPA: 3.23</p>
+        <div class="resume-item mb-5 music-carousel" id="music-carousel">
+          <div>
+            <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/215394365&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
           </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2006 - May 2010</span>
+          <div>
+            <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/212423949&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
           </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
-          <div class="resume-content">
-            <h3 class="mb-0">James Buchanan High School</h3>
-            <div class="subheading mb-3">Technology Magnet Program</div>
-            <p>GPA: 3.56</p>
+          <div>
+            <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/212423697&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
           </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2002 - May 2006</span>
+          <div>
+            <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/212422226&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
+          </div>
+          <div>
+            <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/212356243&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
+          </div>
+          <div>
+            <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/191476030&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
+          </div>
+          <div>
+            <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/176496899&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
+          </div>
+          <div>
+            <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/148620674&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
           </div>
         </div>
 
@@ -164,73 +212,7 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="Photography">
       <div class="w-100">
-        <h2 class="mb-5">Skills</h2>
-
-        <div class="subheading mb-3">Programming Languages &amp; Tools</div>
-        <ul class="list-inline dev-icons">
-          <li class="list-inline-item">
-            <i class="fab fa-html5"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-css3-alt"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-js-square"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-angular"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-react"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-node-js"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-sass"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-less"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-wordpress"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-gulp"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-grunt"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-npm"></i>
-          </li>
-        </ul>
-
-        <div class="subheading mb-3">Workflow</div>
-        <ul class="fa-ul mb-0">
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Mobile-First, Responsive Design</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Cross Browser Testing &amp; Debugging</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Cross Functional Teams</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Agile Development &amp; Scrum</li>
-        </ul>
-      </div>
-    </section>
-
-    <hr class="m-0">
-
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="YouTube">
-      <div class="w-100">
-        <h2 class="mb-5">YouTube</h2>
-        <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-        <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+        <h2 class="mb-5">Photography</h2>
       </div>
     </section>
 
@@ -239,49 +221,30 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="Writing">
       <div class="w-100">
         <h2 class="mb-5">Writing</h2>
-        <ul class="fa-ul mb-0">
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            Google Analytics Certified Developer</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            Mobile Web Specialist - Google Certification</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - University of Colorado Boulder - Emerging Tech Competition 2009</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            2<sup>nd</sup>
-            Place - University of Colorado Boulder - Emerging Tech Competition 2008</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - James Buchanan High School - Hackathon 2006</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            3<sup>rd</sup>
-            Place - James Buchanan High School - Hackathon 2005</li>
-        </ul>
       </div>
     </section>
 
-    <section id="Contact">
-      <p>Yes!</p>
+    <hr class="m-0">
+
+    <section class="resume-section p-lg-5" id="Contact">
+      <div class="w-100">
+        <h2 class="mb-5">Contact</h2>
+        <div class="d-flex justify-content-around">
+          <button class="btn btn-lg" href="mailto:eric.mao@live.com">Email Me!</button>
+          <button class="btn btn-lg" href="https://linkedin.com/in/ericmaousa">LinkedIn</button>
+        </div>
+      </div>
     </section>
   </div>
 
   <!-- Bootstrap core JavaScript -->
   <script src="lib/jquery/jquery.min.js"></script>
-  <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="lib/bootstrap/js/bootstrap.min.js"></script>
 
   <!-- Plugin JavaScript -->
   <script src="lib/easing/easing.min.js"></script>
   <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+  <script type="text/javascript" src="lib/slick/slick.min.js"></script>
 
   <!-- Custom scripts for this template -->
   <script src="js/resume.js"></script>
