--- a/index.html
+++ b/index.html
@@ -230,8 +230,8 @@
       <div class="w-100">
         <h2 class="mb-5">Contact</h2>
         <div class="d-flex justify-content-around">
-          <button class="btn btn-lg" href="mailto:eric.mao@live.com">Email Me!</button>
-          <button class="btn btn-lg" href="https://linkedin.com/in/ericmaousa">LinkedIn</button>
+          <a class="btn btn-lg" href="mailto:eric.mao@live.com">Email Me!</a>
+          <a class="btn btn-lg" href="https://linkedin.com/in/ericmaousa">LinkedIn</a>
         </div>
       </div>
     </section>
