--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
 <body id="page-top">
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
-    <span class="d-block d-lg-block navbar-brand"><h1>Eric<br>Mao</h1></span>
+    <div class="card d-block d-lg-block m-5">
+      <span><h1>Eric<br>Mao</h1></span>
+    </div>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav">
         <li class="nav-item">
