--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <body id="page-top">
 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary" id="sideNav">
     <div class="card d-block d-lg-block m-5">
       <span><h1>Eric<br>Mao</h1></span>
     </div>
